--- a/utopian/static/style.css
+++ b/utopian/static/style.css
@@ -275,6 +275,8 @@ body {
   grid-template-columns: repeat(3, max-content);
   font-size: 1.6rem;
   background-color: var(--color-background); }
+  .statistics--singular {
+    grid-template-columns: max-content; }
 
 .statistics-element {
   display: grid;
